# gelfudp2tcp

./: .gitignore  CMakeLists.txt  README.md  gelf-test-message.sh  gelfudp2tcp.cfg.sample
src/: Decompress.cpp  Decompress.h  GelfChunkedMessage.cpp  GelfChunkedMessage.h  GelfChunkedMessageAssembler.cpp  GelfChunkedMessageAssembler.h  GelfTcpClient.cpp  GelfTcpClient.h  GelfUdpServer.cpp  GelfUdpServer.h  main.cpp
